--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Backend API URL for production
-NEXT_PUBLIC_BACKEND_URL=https://legaliq.onrender.com
+NEXT_PUBLIC_BACKEND_URL=https://advoqat.onrender.com
 
 # Supabase configuration (if you have these)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
