--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
